--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -5,16 +5,16 @@ pt-BR:
       admin:
         one: Adminstrador
         other: Adminstradores
-      profile:
-        one: Perfil
-        other: Perfils
+      user:
+        one: Usuário
+        other: Usuários
     attributes:
       admin:
         id: Código
         email: E-mail
         created_at: Criado em
         updated_at: Atualizado em
-      profile:
+      user:
         id: Código
         email: E-mail
         created_at: Criado em
