--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -12,6 +12,8 @@ pt-BR:
       admin:
         id: Código
         email: E-mail
+        password: Senha
+        password_confirmation: Confirmação da senha
         created_at: Criado em
         updated_at: Atualizado em
       user:
