--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -1,4 +1,3 @@
-
 pt-BR:
   activerecord:
     models:
@@ -8,16 +7,33 @@ pt-BR:
       user:
         one: Usuário
         other: Usuários
+      subject:
+        one: Assunto
+        other: Assuntos
+      question:
+        one: Pergunta
+        other: Perguntas
+
     attributes:
-      admin:
+      attribute_commons: &commons
         id: Código
         email: E-mail
+        created_at: Criado em
+        updated_at: Atualizado em
+        description: Descrição
+
+      admin:
+        <<: *commons
         password: Senha
         password_confirmation: Confirmação da senha
-        created_at: Criado em
-        updated_at: Atualizado em
+
       user:
-        id: Código
-        email: E-mail
-        created_at: Criado em
-        updated_at: Atualizado em
+        <<: *commons
+
+      subject:
+        <<: *commons
+
+      question:
+        <<: *commons
+        subject: Assunto
+        subject_id: Assunto
