--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,10 +1,10 @@
 pt-BR:
   views:
     pagination:
-      first: "&laquo; Primeira"
-      last: "Última &raquo;"
-      previous: "&lsaquo; Anterior"
-      next: "Próxima &rsaquo;"
+      first: "&laquo;"
+      last: "&raquo;"
+      previous: "&lsaquo;"
+      next: "&rsaquo;"
       truncate: "&hellip;"
     actions:
       show: Ver
