added statistics for admins

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -26,7 +26,7 @@ pt-BR:
       title_edit: Editar Questão
       title_new: Cadastrar Questão
     welcome:
-      title_admins: AdminsBackoffice
+      title_admins: Seja Ben-Vindo!
       title_users: Seja Ben-Vindo!
 
   forms:
